[gd_scene load_steps=12 format=2]

[ext_resource path="res://CameraScroll.gd" type="Script" id=1]
[ext_resource path="res://Ambiente.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Box.tscn" type="PackedScene" id=4]
[ext_resource path="res://AnteriorSimple.png" type="Texture" id=5]
[ext_resource path="res://SiguienteSimple.png" type="Texture" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://Font/pixelated.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Ambiente_con_glow.tres" type="Environment" id=9]
[ext_resource path="res://PerfMonitor/PerfMonitor.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 8 )

[node name="CameraScroll" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 958.791, 539.717 )

[node name="Ambiente" parent="." instance=ExtResource( 2 )]
environment = ExtResource( 9 )

[node name="Box" parent="." instance=ExtResource( 4 )]
position = Vector2( 2450.95, 253.984 )

[node name="Box2" parent="." instance=ExtResource( 4 )]
position = Vector2( 2870.02, 571.464 )

[node name="Box3" parent="." instance=ExtResource( 4 )]
position = Vector2( 3200.2, 844.497 )

[node name="Box4" parent="." instance=ExtResource( 4 )]
position = Vector2( 3568.48, 761.953 )

[node name="GUI" type="CanvasLayer" parent="."]
layer = 128

[node name="SlowBtn" type="TouchScreenButton" parent="GUI"]
position = Vector2( 1444.37, 53.939 )
scale = Vector2( 4.64806, 3.16776 )
normal = ExtResource( 5 )

[node name="FastBtn" type="TouchScreenButton" parent="GUI"]
position = Vector2( 1694.16, 53.939 )
scale = Vector2( 5.09167, 3.17151 )
normal = ExtResource( 6 )

[node name="GlowBtn" type="TouchScreenButton" parent="GUI"]
position = Vector2( 1130.79, 29.9661 )
scale = Vector2( 3.12514, 3.17151 )
normal = ExtResource( 7 )

[node name="Label" type="Label" parent="GUI"]
visible = false
margin_left = 60.9845
margin_top = 253.172
margin_right = 613.984
margin_bottom = 419.172
custom_fonts/font = SubResource( 1 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PerfMonitor" parent="." instance=ExtResource( 10 )]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )
[connection signal="pressed" from="GUI/SlowBtn" to="." method="_on_SlowBtn_pressed"]
[connection signal="pressed" from="GUI/FastBtn" to="." method="_on_FastBtn_pressed"]
[connection signal="pressed" from="GUI/GlowBtn" to="." method="_on_GlowBtn_pressed"]
